# chess2lichess

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  chess2lichess.md  package.json
.github/workflows/: node-ci.yml  npm-publish.yml  release-binaries.yml  rust-ci.yml
assets/: eco_openings.csv
docs/: npm-release-guide.md
docs/plans/: 2026-03-08-npm-package-design.md  2026-03-08-npm-packaging-implementation.md  2026-03-14-opening-resolution-design.md
scripts/: postinstall.js
scripts/lib/: checksum.js  launch.js  paths.js  platform.js
src/: app.rs  browser.rs  chesscom.rs  cli.rs  clipboard.rs  error.rs  lichess.rs  main.rs  tui.rs
tests/: checksum.test.mjs  launch.test.mjs  paths.test.mjs  platform.test.mjs
