[package]
name = "chess-to-lichess"
version = "0.1.5"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0"
arboard = "3.4"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.38", features = ["full"] }
url = "2.5"
webbrowser = "1.0"

[[bin]]
name = "c2l"
path = "src/main.rs"
